--- a/site/src/css/page.css
+++ b/site/src/css/page.css
@@ -9,7 +9,7 @@ body {
   --theme-on-dark: #ffffff;
   --theme-light: #6d6d6d;
   --theme-on-dark: #ffffff;
-  --theme-secondary: #388E3C;
+  --theme-secondary: #073809;
   --theme-secondary-light: #8BC34A;
   --default-headline-color:  white;
 }
@@ -39,7 +39,7 @@ a.cta {
 }
 
 rocket-header-scroll-menu {
-  background: var(--theme-dark);
+  background: var(--theme-secondary);
 }
 
 
@@ -82,7 +82,7 @@ footer a {
 }
 
 rocket-header-scroll-menu a.active, rocket-header-scroll-menu a:hover {
-  color: var(--theme-secondary);
+  color: var(--theme-dark);
 }
 
 h1 {
