--- a/site/src/css/page.css
+++ b/site/src/css/page.css
@@ -44,23 +44,73 @@ a.cta {
 }
 
 rocket-header-scroll-menu {
-  background: var(--theme-secondary);
+  position: absolute;
+  left: 0;
+  right: 0;
+  background: rgb(2, 0, 36);
+  background: linear-gradient(
+    0deg,
+    rgba(2, 0, 36, 0) 0%,
+    rgba(0, 0, 0, 0.7035189075630253) 13%,
+    rgba(0, 0, 0, 1) 34%
+  );
 }
-
+main > *:first-child {
+  padding-top: 0 !important;
+}
 main > *:nth-child(2n) {
   background: none !important;
 }
 main > *:nth-child(2n + 1) {
   background: none !important;
 }
+body {
+  overflow: hidden;
+}
+.parallax {
+  perspective: 1px;
+  height: 100vh;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+.parallax__layer {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+.parallax__layer--base {
+  transform: translateZ(0);
+}
+.parallax__layer--back {
+  transform: translateZ(-9px) scale(11);
+  height: 2000px;
+}
+.darksoil-background {
+  filter: brightness(40%);
+  background-image: url(/darksoil.jpg) !important;
+  background-size: contain;
+  background-position: center;
+}
 
-main {
-  background-image: url(/rocky-wall.png) !important;
-  background-color: black;
+h1 {
+  margin: 0;
+  font-size: 54px !important;
+}
+
+h2 {
+  text-align: center;
+  font-size: 48px !important;
+}
+
+rocket-content-area {
+  padding: 20px;
+  min-height: 400px;
 }
 
 rocket-card {
-  background-color: var(--theme-secondary);
+  background-color: rgba(150, 150, 150, 0.2);
   min-width: 300px;
   border-radius: 8px;
 }
