--- a/site/src/css/page.css
+++ b/site/src/css/page.css
@@ -109,8 +109,8 @@ p {
 }
 
 rocket-content-area {
-  padding: 20px;
-  min-height: 400px;
+  padding: 80px;
+  min-height: 60vh;
 }
 
 rocket-card {
@@ -118,6 +118,25 @@ rocket-card {
   background-color: rgba(150, 150, 150, 0.2);
   min-width: 300px;
   border-radius: 4px;
+  padding: 3rem 3rem;
+}
+
+body {
+  background-color: black;
+}
+
+rocket-card > a {
+  text-align: center;
+}
+
+rocket-content-area div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+rocket-content-area p {
+  max-width: 800px;
 }
 
 .photo {
