--- a/site/src/css/page.css
+++ b/site/src/css/page.css
@@ -45,9 +45,8 @@ a.cta {
 
 rocket-header-scroll-menu {
   position: absolute;
-  left: 0;
-  right: 0;
-  --rocket-header-scroll-menu-padding-right: 392px;
+  width: 100vw;
+  height: 108px;
   background: rgb(2, 0, 36);
   background: linear-gradient(
     0deg,
