--- a/site/src/css/page.css
+++ b/site/src/css/page.css
@@ -109,8 +109,17 @@ p {
 }
 
 rocket-content-area {
-  padding: 80px;
-  min-height: 60vh;
+  padding: 40px;
+  min-height: 50vh;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+}
+.column {
+  display: flex;
+  flex-direction: column;
 }
 
 rocket-card {
@@ -161,6 +170,10 @@ rocket-header-scroll-menu a:hover {
   color: var(--theme-light);
 }
 
+.custom-social-links {
+  margin-top: -22px;
+}
+
 h1 {
   font-size: var(--step-2);
   line-height: var(--step-3);
@@ -185,8 +198,45 @@ rocket-header-scroll-menu a:nth-child(2) {
 @media screen and (min-width: 1024px) {
   rocket-header-scroll-menu {
     --rocket-header-scroll-menu-text-align: right;
+    --rocket-header-scroll-menu-padding-right: 34ch;
   }
   rocket-header-scroll-menu a:nth-child(2) {
     display: inline;
+  }
+}
+
+@media screen and (max-width: 1481px) {
+  rocket-header-scroll-menu a {
+    display: none !important;
+  }
+
+  .custom-social-links {
+    margin-top: -13px;
+  }
+}
+.card-title {
+  row-gap: 16px;
+
+  flex-flow: column;
+  align-self: center;
+  align-items: center;
+  justify-content: center;
+}
+@media screen and (max-width: 481px) {
+  rocket-header-scroll-menu {
+    top: -18px;
+  }
+  .custom-social-links {
+    left: -44px;
+  }
+  .parallax__layer--base {
+    margin-top: 300px;
+  }
+  rocket-content-area {
+    padding: 20px;
+  }
+  rocket-card {
+    padding: 1rem;
+    min-width: 250px;
   }
 }
