--- a/style.css
+++ b/style.css
@@ -305,3 +305,14 @@ h4 {
   font-size: 1.5rem;
   font-weight: 700;
 }
+
+.button {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #0e540b;
+  color: white;
+  text-decoration: none;
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
+}
