--- a/style.css
+++ b/style.css
@@ -125,6 +125,7 @@ h2 {
 }
 h3 {
   margin-top: 0 !important;
+  font-size: 36px;
 }
 p {
   text-align: justify;
@@ -315,4 +316,6 @@ h4 {
   border-radius: 4px;
   border: none;
   cursor: pointer;
+  text-align: center;
+  
 }
