--- a/style.css
+++ b/style.css
@@ -108,7 +108,15 @@ body {
 }
 .darksoil-background {
   filter: brightness(40%);
-  background-image: url(https://raw.githubusercontent.com/darksoil-studio/media/e4c4813fb38b265c75011f02389668e01fda3618/images/darksoil.jpg) !important;
+  background-image: linear-gradient(
+      rgba(0, 0, 0, 0) 0%,
+      rgba(0, 0, 0, 0) 70%,
+      rgba(0, 0, 0, 0.2) 80%,
+      rgba(0, 0, 0, 0.7) 90%,
+      rgba(0, 0, 0, 0.9) 95%,
+      rgba(0, 0, 0, 1) 100%
+    ),
+    url(https://raw.githubusercontent.com/darksoil-studio/media/7ca290dbbd3dfbd9f638cb5dc0cdb6639ee484ad/images/darksoil.jpg) !important;
   background-size: cover;
   background-position: center;
 }
@@ -140,7 +148,6 @@ rocket-content-area {
   display: flex;
   flex-direction: row;
 }
-
 
 .column {
   display: flex;
@@ -175,7 +182,6 @@ rocket-columns rocket-card {
   border-radius: 50%;
   padding-top: 8px;
   object-fit: contain;
-
 }
 
 footer {
@@ -266,13 +272,10 @@ rocket-header-scroll-menu a:nth-child(2) {
   rocket-card {
     padding: 1rem;
     min-width: 250px;
-    
   }
   rocket-content-area {
     flex-direction: column;
   }
- 
-
 }
 
 a.cta {
@@ -309,19 +312,21 @@ h4 {
 
 .button {
   display: inline-block;
-    border: 1px solid transparent;
-    text-align: center;
-    font-weight: 600;
-    white-space: nowrap;
-    transition: color 0.25s, border-color 0.25s, background-color 0.25s;
-    border-color: #3e63dd;
-    color: var(--vp-button-brand-text);
-    background-color: #3e63dd;
-    border-radius: 20px;
-    padding: 0 20px;
-    line-height: 38px;
-    font-size: 14px;
-    
+  border: 1px solid transparent;
+  text-align: center;
+  font-weight: 600;
+  white-space: nowrap;
+  transition:
+    color 0.25s,
+    border-color 0.25s,
+    background-color 0.25s;
+  border-color: #3e63dd;
+  color: var(--vp-button-brand-text);
+  background-color: #3e63dd;
+  border-radius: 20px;
+  padding: 0 20px;
+  line-height: 38px;
+  font-size: 14px;
 }
 
 .black-background {
